WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94961
WebGL should not flip textures on presentation if contents are unchanged
https://bugs.webkit.org/show_bug.cgi?id=94961
Summary
WebGL should not flip textures on presentation if contents are unchanged
James Robinson
Reported
2012-08-24 11:27:08 PDT
WebGL should not flip textures on presentation if contents are unchanged
Attachments
Patch
(9.21 KB, patch)
2012-08-24 11:33 PDT
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-08-24 11:33:48 PDT
Created
attachment 160461
[details]
Patch
James Robinson
Comment 2
2012-08-24 11:34:48 PDT
The bug is chromium-specific (afaik) but the fix touches cross-platform code, so I haven't marked this with [chromium]. I think this could also be solved in a chromium-specific way that doesn't touch DrawingBuffer at all but this seems to me like something DrawingBuffer should be able to handle.
Kenneth Russell
Comment 3
2012-08-24 17:01:23 PDT
Comment on
attachment 160461
[details]
Patch The fix looks good as far as I can see. Some additional test cases to try would include printing of WebGL content, the other WebGL layout tests, and various demos on the web. r=me
James Robinson
Comment 4
2012-08-24 18:53:31 PDT
(In reply to
comment #3
)
> (From update of
attachment 160461
[details]
) > The fix looks good as far as I can see. Some additional test cases to try would include printing of WebGL content, the other WebGL layout tests, and various demos on the web. r=me
Thanks for the review. I'll check these locally before landing - our automated testing of things like webgl printing hasn't been too reliable in the past. Is there a way to force AA off for local testing other than code modification, by any chance?
Kenneth Russell
Comment 5
2012-08-27 14:55:07 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (From update of
attachment 160461
[details]
[details]) > > The fix looks good as far as I can see. Some additional test cases to try would include printing of WebGL content, the other WebGL layout tests, and various demos on the web. r=me > > Thanks for the review. I'll check these locally before landing - our automated testing of things like webgl printing hasn't been too reliable in the past. Is there a way to force AA off for local testing other than code modification, by any chance?
zmo added the command line option --disable-gl-multisampling a while back; I think it should still work.
James Robinson
Comment 6
2012-08-27 15:35:00 PDT
Printing appears to be broken with or without this patch - after printing the WebGL content is cleared. I don't know how long this has been broken. Most pages / demos repaint the canvas on every frame so this problem is transient. Filed
https://bugs.webkit.org/show_bug.cgi?id=95140
to cover that bug. I don't think this patch makes anything worse.
Kenneth Russell
Comment 7
2012-08-27 15:38:35 PDT
(In reply to
comment #6
)
> Printing appears to be broken with or without this patch - after printing the WebGL content is cleared. I don't know how long this has been broken. Most pages / demos repaint the canvas on every frame so this problem is transient. Filed
https://bugs.webkit.org/show_bug.cgi?id=95140
to cover that bug. I don't think this patch makes anything worse.
Darn it. Thanks for testing anyway. Please go ahead with your patch.
James Robinson
Comment 8
2012-08-27 15:42:04 PDT
Committed
r126810
: <
http://trac.webkit.org/changeset/126810
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug