WebGL should not flip textures on presentation if contents are unchanged https://bugs.webkit.org/show_bug.cgi?id=94961

Reviewed by Kenneth Russell.

Source/WebCore:

For WebGL contexts where antialias and preserveDrawingBuffer are false, chromium implements DrawingBuffer using
two textures and flips them on presentation. If the page hasn't actually rendered anything into the WebGL
context since the last presentation, this makes an old frame available. This fixes the bug by marking the
DrawingBuffer when its contents change.

Test: compositing/webgl/webgl-repaint.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::markContextChanged):
* platform/graphics/chromium/DrawingBufferChromium.cpp:
(WebCore::DrawingBuffer::DrawingBuffer):
(WebCore::DrawingBuffer::prepareBackBuffer):
* platform/graphics/gpu/DrawingBuffer.h:
(WebCore::DrawingBuffer::markContentsChanged):
(DrawingBuffer):

Tools:

Run some compositing webgl tests in threaded mode to catch regressions specific to that mode.

* Scripts/webkitpy/layout_tests/port/chromium.py:
(ChromiumPort.virtual_test_suites):

LayoutTests:

Adds a test to make sure multiple displays without any WebGL draw calls leave the WebGL output alone.

* compositing/webgl/webgl-repaint-expected.png: Added.
* compositing/webgl/webgl-repaint-expected.txt: Added.
* compositing/webgl/webgl-repaint.html: Added.

Canonical link: https://commits.webkit.org/112990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126810 268f45cc-cd09-0410-ab3c-d52691b4dbfc